fixed alignment issue

--- a/styles/place.css
+++ b/styles/place.css
@@ -32,18 +32,37 @@ main {
     font-size: clamp(1rem, 2vw, 2rem);
 }
 
-div {
+section {
     background-color: var(--primary);
+    color: var(--secondary);
+    font-weight: 500;
+    margin: 15px 0;
     
 }
 h2 {
     text-align: center;
     margin: 1rem;
-    font-size: 2rem;
+    font-size: clamp(2rem, 5vw, 3rem);
 }
 img {
     width: 100%;
     height: auto;
+}
+
+.weather {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.weather img {
+    width: 50%;
+    /* margin-bottom: 1rem; */
+}
+
+li {
+    list-style: none;
+
 }
 
 footer {
@@ -55,10 +74,25 @@ footer {
 }
 
 @media screen and (min-width: 560px) {
+
     .data, .weather{
         position: relative;
         /* flex-wrap: wrap; */
         /* justify-content: space-around; */
+    }
+    .weather {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        /* flex-direction: row; */
+        align-items: center;
+        justify-content: center;
+        text-align: left;
+    }
+    .weather img {
+        width: 13%;
+    }
+    .weather p {
+        flex-direction: column;
     }
     
     
